--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,3 +6,6 @@
 @use 'layout/festival';   
 @use 'layout/lineup';   
 @use 'layout/galeria';   
+@use 'layout/boletos';   
+@use 'layout/footer';   
+
