--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,6 +4,16 @@
 .header{
     background-color: v.$verde;
 
+    @include m.tablet {
+        &.fijo{
+            position: fixed;
+            width: 100%;
+            box-shadow: .1rem .2rem .1rem #333;
+            left: 0;
+            top: 0;
+        }
+    }
+
     h1{
         color: v.$blanco;
         text-align: center;
